--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-ldap (0.49) bionic; urgency=high
+
+  * Adding debian dirs file
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Mon, 28 Jan 2019 14:55:04 +0100
+
 n4d-ldap (0.48) bionic; urgency=medium
 
   * First bionic release
