--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-ldap (0.51) bionic; urgency=high
+
+  * Setting bigger ldap mdb size
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Tue, 05 Mar 2019 16:54:16 +0100
+
 n4d-ldap (0.50) bionic; urgency=medium
 
   * Adding sudo group
