--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-ldap (0.51.1) bionic; urgency=medium
+
+  * Patch REPLICATION_INTERFACE n4d var
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Tue, 11 Feb 2020 13:24:00 +0100
+
 n4d-ldap (0.51) bionic; urgency=high
 
   * Setting bigger ldap mdb size
