--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-ldap (0.51.2) bionic; urgency=medium
+
+  * Fix REPLICATION_INTERFACE has been initialized wrongly
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Wed, 26 Feb 2020 16:41:30 +0100
+
 n4d-ldap (0.51.1) bionic; urgency=medium
 
   * Patch REPLICATION_INTERFACE n4d var
