--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-ldap (0.53.1) focal; urgency=medium
+
+  * Fixes
+
+ -- M.Angel Juan <m.angel.juan@gmail.com>  Fri, 05 Feb 2021 11:18:33 +0100
+
 n4d-ldap (0.53) focal; urgency=medium
 
   * Migration to Python3
