--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-ldap (0.54.1) focal; urgency=medium
+
+  * added n4d-netfolders dependency
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Fri, 12 Feb 2021 14:27:45 +0100
+
 n4d-ldap (0.54) focal; urgency=medium
 
   * Bug fixes. 
