--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-ldap (0.53) bionic; urgency=medium
+
+  * Fixed perms that should not be applied
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Tue, 16 Mar 2021 11:22:19 +0100
+
 n4d-ldap (0.52) bionic; urgency=medium
 
   * move code to set replica interface to n4d-network plugin
