--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+n4d-ldap (0.58.1.23) jammy; urgency=medium
+
+  * First jammy release
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Wed, 24 Jan 2024 09:52:18 +0100
+
 n4d-ldap (0.58.1) focal; urgency=medium
 
   * fixed backup variable name
